# googletest-clion-cpp-template

./: CMakeLists.txt  README.md  Server.cpp  Server.hpp  example_func.cpp  main.cpp
unit_tests/: example_test.cpp
